@@ -6,6 +6,16 @@
 	* src/Makefile.am:
 	* src/bookmarks/Makefile.am:
 
+	Fix a bug in the last commit.
+
+2006-10-08  Christian Persch  <chpe@cvs.gnome.org>
+
+	* embed/Makefile.am:
+	* lib/Makefile.am:
+	* lib/egg/Makefile.am:
+	* src/Makefile.am:
+	* src/bookmarks/Makefile.am:
+
 	Make the enum/flags values not global.
 
 2006-10-06  Christian Persch  <chpe@cvs.gnome.org>
